--- a/urban-spork-client/resource/client.fxml
+++ b/urban-spork-client/resource/client.fxml
@@ -1,11 +1,16 @@
-<?xml version="1.0" encoding="UTF-8"?>
+<?xml version="1.0" encoding="UTF-8" ?>
 
-<?import com.jfoenix.controls.*?>
-<?import java.lang.*?>
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.paint.*?>
+<?import com.jfoenix.controls.* ?>
+<?import java.lang.* ?>
+<?import javafx.scene.control.* ?>
+<?import javafx.scene.layout.* ?>
+<?import javafx.scene.paint.* ?>
+<?import com.jfoenix.controls.* ?>
+<?import java.lang.* ?>
+<?import javafx.geometry.* ?>
+<?import javafx.scene.control.* ?>
+<?import javafx.scene.layout.* ?>
+<?import javafx.scene.paint.* ?>
 <?import com.jfoenix.controls.* ?>
 <?import java.lang.* ?>
 <?import javafx.geometry.* ?>
@@ -159,14 +164,21 @@
       </Tab>
       <Tab text="%console.tab1.text">
          <content>
-            <ScrollPane prefViewportHeight="453.0" prefViewportWidth="640.0">
-               <content>
-                  <TextArea fx:id="logTextArea" editable="false" minHeight="430.0" minWidth="620.0" />
-               </content>
-               <padding>
-                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-               </padding>
-            </ScrollPane>
+            <GridPane prefHeight="29.0" prefWidth="440.0">
+               <columnConstraints>
+                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="10.0" minWidth="10.0" prefWidth="10.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" minWidth="-Infinity" />
+                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="10.0" minWidth="10.0" prefWidth="10.0" />
+               </columnConstraints>
+               <rowConstraints>
+                  <RowConstraints maxHeight="10.0" minHeight="10.0" prefHeight="10.0" vgrow="SOMETIMES" />
+                  <RowConstraints vgrow="SOMETIMES" />
+                  <RowConstraints maxHeight="10.0" minHeight="10.0" prefHeight="10.0" vgrow="SOMETIMES" />
+               </rowConstraints>
+               <children>
+                  <TextArea fx:id="logTextArea" editable="false" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+               </children>
+            </GridPane>
          </content>
       </Tab>
    </tabs>
