--- a/urban-spork-client/resource/console.css
+++ b/urban-spork-client/resource/console.css
@@ -41,7 +41,7 @@
 .jfx-button {
     -fx-font-family: 'Source Han Sans SC';
     -fx-text-fill: -fx-primary-text;
-    -fx-background-color: -fx-secondary-color;
+    /* -fx-background-color: -fx-secondary-color; */
     /* -fx-border-color: -fx-primary-color; */
     -fx-text-alignment: center;
 }
