--- a/urban-spork-client-gui/resource/console.css
+++ b/urban-spork-client-gui/resource/console.css
@@ -151,8 +151,8 @@ GridPane {
   -fx-background-color: #000;
 }
 
-.chart-series-line {
-  -fx-stroke-width: 2;
+.chart {
+  -fx-max-height: 250;
 }
 
 .chart-legend {
@@ -165,6 +165,10 @@ GridPane {
 
 .chart-plot-background {
   -fx-background-color: transparent;
+}
+
+.chart-series-line {
+  -fx-stroke-width: 2;
 }
 
 .default-color0.chart-series-line {
